--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make-darwin": "electron-forge make --platform darwin --targets @electron-forge/maker-zip",
+    "make-darwin": "electron-forge make --platform darwin --targets @electron-forge/maker-zip,@electron-forge/maker-dmg",
     "make-linux": "electron-forge make --platform linux --targets @electron-forge/maker-deb,@electron-forge/maker-rpm",
     "make-win32": "electron-forge make --platform win32 --targets @electron-forge/maker-squirrel",
     "make-all": "npm run make-darwin && npm run make-linux && npm run make-win32"
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
     "@electron-forge/maker-deb": "^6.0.0-beta.63",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.63",
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
